--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,21 @@ article h3 {
     margin: 1em auto;
 }
 
+span.dark-dot {
+    width: 1px;
+    height: 0;
+    border-radius: 50%;
+    background-color: black;
+}
+
+span.grey-dot {
+    width: 3px;
+    height: 3px;
+    border-radius: 50%;
+    background-color: darkgray;
+    color: darkgray;
+}
+
 .language-item {
     border: solid 1px #333;
     border-radius: 0.2em;
@@ -83,29 +98,8 @@ ul li a i {
   padding-right: 0.5em;
 }
 
-div a {
+header a {
     text-decoration: none;
     color: navy;
     padding: 0.5vw;
-}
-
-
-
-ul.nav-links {
-    display: flex;
-    margin: 0;
-    padding: 0;
-}
-
-.top-nav .nav-links {
-    justify-content: flex-end;
-}
-
-.footer-nav .nav-links {
-    justify-content: space-around;
-}
-
-.footer-nav .country {
-    justify-content: flex-start;
-    margin-left: 5px;
 }
